[gd_scene load_steps=24 format=3 uid="uid://yfcw84x2t8i6"]

[ext_resource type="PackedScene" uid="uid://cuyd1qv0pn26e" path="res://addons/midi/MidiPlayer.tscn" id="1_c4ny6"]
[ext_resource type="Texture2D" uid="uid://cjo7yv8541cba" path="res://graphics/depricated/judgement_line.png" id="2_iklqn"]
[ext_resource type="Script" path="res://scenes/level/prototyping/level_prototyp_2/conductor.gd" id="3_e6xvd"]
[ext_resource type="PackedScene" uid="uid://cekuqasfi73iu" path="res://scenes/elements/instruments/kick/kick.tscn" id="4_0rjll"]
[ext_resource type="PackedScene" uid="uid://coc8xvxoovcjm" path="res://scenes/elements/instruments/snare/snare.tscn" id="5_awccx"]
[ext_resource type="PackedScene" uid="uid://cg727fm2j5p8p" path="res://scenes/elements/instruments/mid_tom/mid_tom.tscn" id="6_yey8d"]
[ext_resource type="PackedScene" uid="uid://dwqriu0a4royy" path="res://scenes/elements/instruments/floor_tom/floor_tom.tscn" id="8_umyaw"]
[ext_resource type="PackedScene" uid="uid://bymwj110vi6ny" path="res://scenes/elements/instruments/ride/ride.tscn" id="10_431dd"]
[ext_resource type="PackedScene" uid="uid://dt1kyjj4nqnd8" path="res://scenes/elements/instruments/crash/crash.tscn" id="12_4llwc"]
[ext_resource type="PackedScene" uid="uid://xooru71ir1sq" path="res://scenes/elements/instruments/hihat/hihat.tscn" id="14_6yxaa"]
[ext_resource type="Script" path="res://scenes/level/prototyping/level_prototyp_2/JudgementLine.gd" id="15_xvojw"]
[ext_resource type="Texture2D" uid="uid://b1f4l3m6m1b5p" path="res://graphics/depricated/DrumRing.png" id="16_y763b"]
[ext_resource type="PackedScene" uid="uid://brtjo7k7skq3r" path="res://scenes/elements/notes/drum_ring/drum_ring.tscn" id="17_i83pe"]
[ext_resource type="Texture2D" uid="uid://c6osvq2k5npdi" path="res://graphics/depricated/CymbalRing.png" id="18_st7ct"]

[sub_resource type="Animation" id="Animation_1ths0"]
resource_name = "HitAnimation"
length = 0.12
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CymbalRing:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.06, 0.119843),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(0.419608, 0.858824, 0.584314, 1), Color(0.439216, 0.862745, 0.6, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CymbalRing:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.06, 0.11967),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.440129, 0.440129), Vector2(0.48, 0.48), Vector2(0.4, 0.4)]
}

[sub_resource type="Animation" id="Animation_bq24x"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CymbalRing:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CymbalRing:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.440129, 0.440129)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tdnit"]
_data = {
"HitAnimation": SubResource("Animation_1ths0"),
"RESET": SubResource("Animation_bq24x")
}

[sub_resource type="Animation" id="Animation_p2wo4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SnareSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SnareSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.420339, 0.420339)]
}

[sub_resource type="Animation" id="Animation_y40a1"]
resource_name = "SnareAnimationHit"
length = 0.12
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SnareSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.06, 0.119843),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(0.419608, 0.858824, 0.584314, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SnareSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.06, 0.119843),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.4, 0.4), Vector2(0.47, 0.47), Vector2(0.4, 0.4)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uwcf7"]
_data = {
"RESET": SubResource("Animation_p2wo4"),
"SnareAnimationHit": SubResource("Animation_y40a1")
}

[sub_resource type="Animation" id="Animation_owdae"]
resource_name = "KickAnimationHit"
length = 0.12
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("KickSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0599643, 0.119843),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.4, 0.4), Vector2(0.47, 0.47), Vector2(0.4, 0.4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("KickSprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0599643, 0.119843),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(0.419608, 0.858824, 0.584314, 1), Color(0.419608, 0.858824, 0.584314, 0)]
}

[sub_resource type="Animation" id="Animation_dcygk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("KickSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.4, 0.4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("KickSprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1l5iu"]
_data = {
"KickAnimationHit": SubResource("Animation_owdae"),
"RESET": SubResource("Animation_dcygk")
}

[node name="Prototyp2" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
z_index = -1
z_as_relative = false
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.572549, 0.572549, 0.572549, 1)

[node name="MidiPlayer" parent="." instance=ExtResource("1_c4ny6")]
file = "res://scenes/level/prototyping/level_prototyp_2/Rock_Rockbeat_1.mid"
volume_db = 0.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="Pads" type="Node2D" parent="."]

[node name="Kick" parent="Pads" instance=ExtResource("4_0rjll")]
metadata/_edit_use_anchors_ = true

[node name="Snare" parent="Pads" instance=ExtResource("5_awccx")]
metadata/_edit_use_anchors_ = true

[node name="MidTom" parent="Pads" instance=ExtResource("6_yey8d")]
metadata/_edit_use_anchors_ = true

[node name="LowTom" parent="Pads" instance=ExtResource("8_umyaw")]
metadata/_edit_use_anchors_ = true

[node name="Ride" parent="Pads" instance=ExtResource("10_431dd")]
metadata/_edit_use_anchors_ = true

[node name="Crash" parent="Pads" instance=ExtResource("12_4llwc")]
metadata/_edit_use_anchors_ = true

[node name="HiHat" parent="Pads" instance=ExtResource("14_6yxaa")]
metadata/_edit_use_anchors_ = true

[node name="JudgementLine" type="Node2D" parent="."]
z_as_relative = false
script = ExtResource("15_xvojw")

[node name="JudgementLineSprite" type="Sprite2D" parent="JudgementLine"]
show_behind_parent = true
z_index = 1
z_as_relative = false
position = Vector2(1004, 532)
texture = ExtResource("2_iklqn")

[node name="SnareSprite" type="Sprite2D" parent="JudgementLine"]
modulate = Color(1, 1, 1, 0)
position = Vector2(255, 528)
scale = Vector2(0.420339, 0.420339)
texture = ExtResource("16_y763b")

[node name="KickSprite" type="Sprite2D" parent="JudgementLine"]
modulate = Color(1, 1, 1, 0)
position = Vector2(255, 666)
scale = Vector2(0.4, 0.4)
texture = ExtResource("16_y763b")

[node name="CymbalRing" type="Sprite2D" parent="JudgementLine"]
modulate = Color(1, 1, 1, 0)
top_level = true
position = Vector2(255, 391)
scale = Vector2(0.440129, 0.440129)
texture = ExtResource("18_st7ct")

[node name="CymbalAnimationHit" type="AnimationPlayer" parent="JudgementLine"]
libraries = {
"": SubResource("AnimationLibrary_tdnit")
}

[node name="SnareAnimationHit" type="AnimationPlayer" parent="JudgementLine"]
libraries = {
"": SubResource("AnimationLibrary_uwcf7")
}

[node name="KickAnimationHit" type="AnimationPlayer" parent="JudgementLine"]
libraries = {
"": SubResource("AnimationLibrary_1l5iu")
}

[node name="Conductor" type="Node2D" parent="."]
script = ExtResource("3_e6xvd")

[node name="SnareRing" parent="." instance=ExtResource("17_i83pe")]
visible = false
position = Vector2(255, 527)
scale = Vector2(0.4, 0.4)

[node name="KickRing" parent="." instance=ExtResource("17_i83pe")]
visible = false
position = Vector2(255, 666)
scale = Vector2(0.4, 0.4)

[connection signal="appeared_instrument_name" from="MidiPlayer" to="Conductor" method="_on_midi_player_appeared_instrument_name"]
[connection signal="midi_event" from="MidiPlayer" to="Conductor" method="_on_midi_player_midi_event"]
[connection signal="kick_hit" from="Pads/Kick" to="JudgementLine" method="_on_kick_kick_hit"]
[connection signal="kick_hit" from="Pads/Kick" to="Conductor" method="_on_kick_kick_hit"]
[connection signal="snare_hit" from="Pads/Snare" to="JudgementLine" method="_on_snare_snare_hit"]
[connection signal="snare_hit" from="Pads/Snare" to="Conductor" method="_on_snare_snare_hit"]
[connection signal="hihat_hit" from="Pads/HiHat" to="JudgementLine" method="_on_hi_hat_hihat_hit"]
[connection signal="hihat_hit" from="Pads/HiHat" to="JudgementLine/CymbalAnimationHit" method="_on_hi_hat_hihat_hit"]
[connection signal="hihat_hit" from="Pads/HiHat" to="Conductor" method="_on_hi_hat_hihat_hit"]
